[gd_scene format=3 uid="uid://cclqov7m5aj47"]

[ext_resource type="Script" uid="uid://c5s7q8rlkiicv" path="res://studio/hud/item_panel/preview/item_preview.gd" id="1_j8rdi"]

[node name="ItemPopup" type="ConfirmationDialog" unique_id=448179707]
oversampling_override = 1.0
title = "Preview"
size = Vector2i(322, 461)
visible = true
ok_button_text = "Add Item"
script = ExtResource("1_j8rdi")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1151518397]
offset_left = 8.0
offset_top = 8.0
offset_right = 314.0
offset_bottom = 412.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer" unique_id=1645513169]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_type_variation = &"Section"

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/PanelContainer" unique_id=1401259321]
layout_mode = 2
stretch = true

[node name="Preview" type="SubViewport" parent="VBoxContainer/PanelContainer/SubViewportContainer" unique_id=857371654]
unique_name_in_owner = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(282, 226)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/PanelContainer/SubViewportContainer/Preview" unique_id=832220026]

[node name="FrameRate" type="HBoxContainer" parent="VBoxContainer" unique_id=558018245]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/FrameRate" unique_id=748380693]
layout_mode = 2
size_flags_horizontal = 3
text = "Animation Frame Rate"

[node name="Value" type="SpinBox" parent="VBoxContainer/FrameRate" unique_id=1264399208]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 2
suffix = "FPS"

[node name="ZIndex" type="HBoxContainer" parent="VBoxContainer" unique_id=2052672274]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ZIndex" unique_id=870514906]
layout_mode = 2
size_flags_horizontal = 3
text = "Layer"

[node name="Value" type="SpinBox" parent="VBoxContainer/ZIndex" unique_id=1063525299]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
min_value = -30.0
max_value = 30.0
alignment = 2
suffix = "Z"

[node name="Pin" type="HBoxContainer" parent="VBoxContainer" unique_id=1134718284]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Pin" unique_id=1347044400]
layout_mode = 2
size_flags_horizontal = 3
text = "Pin to Model"

[node name="Value" type="CheckButton" parent="VBoxContainer/Pin" unique_id=1431061829]
layout_mode = 2
alignment = 2

[node name="Flip" type="HBoxContainer" parent="VBoxContainer" unique_id=1712798124]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Flip" unique_id=1821922918]
layout_mode = 2
size_flags_horizontal = 3
text = "Flip"

[node name="Value" type="CheckButton" parent="VBoxContainer/Flip" unique_id=628055290]
layout_mode = 2
alignment = 2

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="value_changed" from="VBoxContainer/FrameRate/Value" to="." method="_on_framerate_changed"]
[connection signal="value_changed" from="VBoxContainer/ZIndex/Value" to="." method="_on_sortorder_changed"]
[connection signal="toggled" from="VBoxContainer/Pin/Value" to="." method="_on_pinnable_toggled"]
[connection signal="toggled" from="VBoxContainer/Flip/Value" to="." method="_on_flip_toggled"]
